# bluepy

./: .gitignore  remote_voice_enable.py
blezpp/: CMakeLists.txt  bletoolkit.cc  blezpp.cc
blezpp/bluez-5.47/attrib/: att.h  gatttool.h
blezpp/bluez-5.47/btio/: btio.h
blezpp/cmake/: toolchain.cmake
blezpp/src/: blezpp.cc  blezpp.hpp
bluepy/: .gitignore  CMakeLists.txt  README.md  blescan.py  bletoolkit.cc  bletoolkit.cpp  blezpp.cc  blezpp.hpp  blue-dev.c  blue-dev.cpp  bluepy-dev.c  bluepy-dev.h  bluepy-helper.c  bluepy-helper.cc  bluepy-helper.h  bluepy-helper.hpp  btle.py  example.c  get_services.py  mgmt_wrapper.cpp
bluepy/bluez-5.47/src/shared/: mgmt.h
dev/: README.md  bletoolkit  bletoolkit.cc  blezpp.hpp  bluepy-helper.hpp
